--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,6 +18,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:paddingLeft="16dp"
+        android:textColor="@android:color/black"
         android:hint="email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,6 +33,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="password"
+        android:textColor="@android:color/black"
         android:paddingLeft="16dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/email_login"
