--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="name"
+        android:textColor="@android:color/black"
         android:inputType="textPersonName"
         android:paddingLeft="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +35,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="email"
+        android:textColor="@android:color/black"
         android:inputType="textEmailAddress"
         android:paddingLeft="16dp"
         app:layout_constraintEnd_toEndOf="@+id/name_register"
@@ -49,6 +51,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="password"
+        android:textColor="@android:color/black"
         android:inputType="textPassword"
         android:paddingLeft="16dp"
         app:layout_constraintEnd_toEndOf="@+id/email_register"
