--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,7 @@
         android:paddingLeft="16dp"
         android:textColor="@android:color/black"
         android:hint="email"
+        android:textColorHint="#DDAAAAAA"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +34,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="password"
+        android:textColorHint="#DDAAAAAA"
         android:textColor="@android:color/black"
         android:paddingLeft="16dp"
         android:inputType="textPassword"
