--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="name"
+        android:textColorHint="#DDAAAAAA"
         android:textColor="@android:color/black"
         android:inputType="textPersonName"
         android:paddingLeft="16dp"
@@ -35,6 +36,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="email"
+        android:textColorHint="#DDAAAAAA"
         android:textColor="@android:color/black"
         android:inputType="textEmailAddress"
         android:paddingLeft="16dp"
@@ -51,6 +53,7 @@
         android:background="@drawable/rounded_register"
         android:ems="10"
         android:hint="password"
+        android:textColorHint="#DDAAAAAA"
         android:textColor="@android:color/black"
         android:inputType="textPassword"
         android:paddingLeft="16dp"
@@ -92,7 +95,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/rounded_select_photo"
@@ -101,16 +104,18 @@
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/select_photo_imageview_register"
-        app:civ_border_width="4dp"
-        app:civ_border_color="@color/colorPrimaryDark"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_marginTop="32dp"
+        app:civ_border_color="@android:color/white"
+        app:civ_border_width="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/select_photo_button"
-        app:layout_constraintEnd_toEndOf="@+id/select_photo_button"></de.hdodenhof.circleimageview.CircleImageView>
+        app:layout_constraintEnd_toEndOf="@+id/select_photo_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"></de.hdodenhof.circleimageview.CircleImageView>
 </androidx.constraintlayout.widget.ConstraintLayout>
