--- a/app/src/main/res/layout/latest_group_row.xml
+++ b/app/src/main/res/layout/latest_group_row.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <Button
+    <TextView
         android:id="@+id/text_view_groupname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:background="@drawable/rounded_register_button"
-        android:textStyle="bold"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:layout_margin="5dp"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
