--- a/app/src/main/res/layout/activity_latest_messages.xml
+++ b/app/src/main/res/layout/activity_latest_messages.xml
@@ -65,6 +65,7 @@
         android:id="@+id/recyclerview_latest_messages"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/white"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
