--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="263dp"
         android:layout_height="509dp"
-        android:src="@drawable/lossbichmessenger"
+        android:src="@drawable/esir_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
