--- a/app/src/main/res/layout/activity_new_group.xml
+++ b/app/src/main/res/layout/activity_new_group.xml
@@ -98,7 +98,9 @@
             android:id="@+id/create_group_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:hint="Create"
+            android:textColorHint="@android:color/black"
+            android:background="@drawable/rounded_register_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
